# 3DViewer

./: CMakeLists.txt  Makefile  README.md
src/: Makefile  main.c  s21_3dviewer.h
src/gui/: 3dviewer.glade  buttons_change_display.c  change_display.c  change_input_mode.c  change_work_mode.c  close_app.c  common.css  entrys_change_display.c  gui_utils.c  main_window.c  open_file.c
src/gui/slots/: apply_initial_settings.c  buttons_change_display.c  change_input_mode.c  change_work_mode.c  close_app.c  create_gif.c  entrys_change_display.c  open_file.c  save_gif.c  save_image.c  signals_connect.c
src/lib/: affine_transformations.c  free_obj_data.c  generate_filepath.c  parse_file.c  render.c
src/tests/: affine_transformation_suite.c  parse_file_suite.c  tests.c  tests.h
